--- a/inference.ipynb
+++ b/inference.ipynb
@@ -352,27 +352,29 @@
    "source": [
     "USE_DYNAMIC_WINDOWING = True\n",
     "def process_events(args):\n",
-    "    # Read sensor size from the first first line of the event file\n",
-    "    path_to_events = args.input_file\n",
-    "    # Raise an error if the file does not exist\n",
-    "    if not os.path.exists(path_to_events):\n",
-    "        raise ValueError(f\"File {path_to_events} does not exist\")\n",
+    "    if args.width and args.height:  # sensor size is provided in args\n",
+    "        width = args.width\n",
+    "        height = args.height\n",
+    "    else:  # read sensor size from the first line of the event file\n",
+    "        path_to_events = args.input_file\n",
+    "        # Raise an error if the file does not exist\n",
+    "        if not os.path.exists(path_to_events):\n",
+    "            raise ValueError(f\"File {path_to_events} does not exist\")\n",
+    "        \n",
+    "        # Determine the type of the file\n",
+    "        _, file_extension = os.path.splitext(args.input_file)\n",
+    "        if file_extension == '.txt':\n",
+    "            header = pd.read_csv(path_to_events, delim_whitespace=True, header=None, names=['width', 'height'],\n",
+    "                                dtype={'width': np.int, 'height': np.int},\n",
+    "                                nrows=1)\n",
+    "            width, height = header.values[0]\n",
+    "        elif file_extension == '.h5':\n",
+    "            with h5py.File(path_to_events, 'r') as f:\n",
+    "                height, width = f.attrs['sensor_resolution'][0:2]\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown file extension {file_extension}\")\n",
     "    \n",
-    "    \n",
-    "    # Determine the type of the file\n",
-    "    _, file_extension = os.path.splitext(args.input_file)\n",
-    "    if file_extension == '.txt':\n",
-    "        header = pd.read_csv(path_to_events, delim_whitespace=True, header=None, names=['width', 'height'],\n",
-    "                            dtype={'width': np.int, 'height': np.int},\n",
-    "                            nrows=1)\n",
-    "        width, height = header.values[0]\n",
-    "    elif file_extension == '.h5':\n",
-    "        with h5py.File(path_to_events, 'r') as f:\n",
-    "            height, width = f.attrs['sensor_resolution'][0:2]\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown file extension {file_extension}\")\n",
-    "   \n",
-    "    print('Sensor size: {} x {}'.format(width, height))\n",
+    "        print('Sensor size: {} x {}'.format(width, height))\n",
     "\n",
     "    # Load model\n",
     "    model = load_model(args.path_to_model)\n",
@@ -468,82 +470,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_dataset(dataset_dir, path_to_model, use_gpu, output_folder, use_resblur=False):\n",
+    "import glob\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "def process_dataset(\n",
+    "    dataset_dir, path_to_model, use_gpu, output_folder, use_resblur=False\n",
+    "):\n",
     "    parser = main_inference_options()\n",
     "    set_inference_options(parser)\n",
     "    default_args = vars(parser.parse_args([]))  # get a dictionary of defaults\n",
-    "    default_args.update({\n",
-    "                    'use_gpu': use_gpu,\n",
-    "                    'auto_hdr': True,\n",
-    "                    'fixed_duration': True,\n",
-    "                })\n",
+    "    default_args.update(\n",
+    "        {\n",
+    "            \"use_gpu\": use_gpu,\n",
+    "            \"auto_hdr\": True,\n",
+    "            \"fixed_duration\": True,\n",
+    "        }\n",
+    "    )\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
     "    for split in os.listdir(dataset_dir):\n",
     "        split_path = os.path.join(dataset_dir, split)\n",
     "        if use_resblur:\n",
-    "            if os.path.isdir(split_path):\n",
-    "                for file in os.listdir(split_path):\n",
-    "                    file_path = os.path.join(split_path, file)\n",
-    "                    if file == 'frame_clip':\n",
-    "                        gt_folder = os.path.join(output_folder, split, 'gt')\n",
-    "                        os.makedirs(gt_folder, exist_ok=True)\n",
-    "                        # Parse all file names like [18707981-18710981]_000002.png, which means the start and end timestamps of the frame exposure in ns. Compute The average time interval between the extracted images.(Only start of exposure). And save the timestamps to a timestamps.txt in seconds, each line is a timestamp. And also save the image files to the gt folder, in the filename of image_{timestamp}.png\n",
-    "                        timestamps = []\n",
-    "                        for image_name in os.listdir(file_path):\n",
-    "                            image_path = os.path.join(file_path, image_name)\n",
-    "                            timestamp = int(image_name.split('_')[0].split('-')[0])\n",
-    "                            timestamps.append(timestamp)\n",
-    "                            image_path = os.path.join(gt_folder, f\"image_{timestamp}.png\")\n",
-    "                            \n",
-    "                            image = cv2.imread(image_path)\n",
-    "                            cv2.imwrite(image_path, image[:,:,0])\n",
+    "            pass\n",
+    "            # if os.path.isdir(split_path):\n",
+    "            #     # for folder in os.listdir(split_path):\n",
+    "            #     #     folder_path = os.path.join(split_path, folder)\n",
+    "            #     # Assert eventcntts_hhfcode_unnormed0606_txt and frame_clip folder exists, or AssertError\n",
+    "            #     assert \"eventcntts_hhfcode_unnormed0606_txt\" in os.listdir(\n",
+    "            #         split_path\n",
+    "            #     ) and \"frame_clip\" in os.listdir(split_path)\n",
+    "            #     events_path = os.path.join(\n",
+    "            #         split_path, \"eventcntts_hhfcode_unnormed0606_txt\"\n",
+    "            #     )\n",
+    "            #     ground_truth_path = os.path.join(split_path, \"frame_clip\")\n",
+    "            #     gt_path = os.path.join(output_folder, split, \"gt\")\n",
     "\n",
-    "                        timestamps = np.array(timestamps)\n",
-    "                        intervals = np.diff(timestamps)\n",
-    "                        avg_interval = np.mean(intervals) / 1e6  # in ms\n",
-    "                        std_interval = np.std(intervals) / 1e6  # in ms\n",
-    "                        print(f\"Average frame interval: {avg_interval}, std: {std_interval}\")\n",
+    "            #     # Read all txt by order of filename and concat into an object, later load into Dataframe\n",
+    "            #     txt_files = sorted(glob.glob(os.path.join(events_path, \"*.txt\")))\n",
+    "            #     concatenated = \"\"\n",
+    "            #     for txt_file in txt_files:\n",
+    "            #         with open(txt_file, \"r\") as f:\n",
+    "            #             concatenated += f.read()\n",
     "\n",
+    "            #     # Save the concatenated txt to a new txt file in split_path\n",
+    "            #     concatenated_txt_path = os.path.join(split_path, \"concatenated.txt\")\n",
+    "            #     with open(concatenated_txt_path, \"w\") as f:\n",
+    "            #         f.write(concatenated)\n",
     "\n",
-    "            \n",
+    "            #     # Parse all file names like [18707981-18710981]_000002.png, which means the start and end timestamps of the frame exposure in ns. Compute The average time interval between the extracted images.(Only start of exposure). And save the timestamps to a timestamps.txt in seconds, each line is a timestamp. And also save the image files to the gt folder, in the filename of image_{timestamp}.png\n",
+    "            #     timestamps = []\n",
+    "            #     for image_name in os.listdir(ground_truth_path):\n",
+    "            #         image_path = os.path.join(ground_truth_path, image_name)\n",
+    "            #         timestamp = int(image_name.split(\"_\")[0].split(\"-\")[0])\n",
+    "            #         timestamps.append(timestamp)\n",
+    "            #         image_path = os.path.join(gt_path, f\"image_{timestamp}.png\")\n",
+    "\n",
+    "            #         image = cv2.imread(image_path)\n",
+    "            #         cv2.imwrite(image_path, image[:, :, 0])\n",
+    "\n",
+    "            #     timestamps = np.array(timestamps)\n",
+    "            #     intervals = np.diff(timestamps)\n",
+    "            #     avg_interval = np.mean(intervals) / 1e6  # in ms\n",
+    "            #     std_interval = np.std(intervals) / 1e6  # in ms\n",
+    "            #     print(f\"Average frame interval: {avg_interval}, std: {std_interval}\")\n",
+    "\n",
     "        else:\n",
-    "        # Check if subfolder is named train or test\n",
-    "            if os.path.isdir(split_path) and split in ['train', 'test']:\n",
+    "            # Check if subfolder is named train or test\n",
+    "            if os.path.isdir(split_path) and split in [\"train\", \"test\"]:\n",
     "                for file in os.listdir(split_path):\n",
-    "                    file_path = os.path.join(split_path, file)\n",
-    "                    subdir_output_folder = os.path.join(output_folder, split, file.split('.')[0])\n",
+    "                    folder_path = os.path.join(split_path, file)\n",
+    "                    subdir_output_folder = os.path.join(\n",
+    "                        output_folder, split, file.split(\".\")[0]\n",
+    "                    )\n",
     "                    os.makedirs(subdir_output_folder, exist_ok=True)\n",
     "\n",
     "                    if file.endswith(\".h5\"):  # convert .h5 files to .txt\n",
     "                        # print(f\"Converting {file_path} to .txt\")\n",
-    "                        \n",
+    "\n",
     "                        # txt_file_path = os.path.join(split_path, file.split('.')[0] + '.txt')\n",
     "                        # convert_h5_to_txt(file_path, txt_file_path)\n",
-    "                        avg_frame_interval, std_frame_interval = extract_gt_images(file_path, subdir_output_folder)\n",
-    "                        print(f\"Average frame interval: {avg_frame_interval}, std: {std_frame_interval}\")\n",
+    "                        avg_frame_interval, std_frame_interval = extract_gt_images(\n",
+    "                            folder_path, subdir_output_folder\n",
+    "                        )\n",
+    "                        print(\n",
+    "                            f\"Average frame interval: {avg_frame_interval}, std: {std_frame_interval}\"\n",
+    "                        )\n",
     "                        # file_path = txt_file_path  # use the converted txt file\n",
-    "                        \n",
+    "\n",
     "                    elif not file.endswith(\".txt\"):  # skip non-txt files\n",
     "                        continue\n",
     "\n",
-    "        print(f\"Processing {file_path}\")\n",
+    "                    print(f\"Processing {folder_path}\")\n",
     "\n",
+    "                    args = default_args.copy()  # start with defaults\n",
+    "                    # update with specific settings for this file\n",
+    "                    args.update(\n",
+    "                        {\n",
+    "                            \"path_to_model\": path_to_model,\n",
+    "                            \"input_file\": folder_path,\n",
+    "                            \"use_gpu\": use_gpu,\n",
+    "                            \"output_folder\": subdir_output_folder,\n",
+    "                            \"window_duration\": avg_frame_interval,\n",
+    "                        }\n",
+    "                    )\n",
+    "                    args_namespace = argparse.Namespace(**args)\n",
+    "                    process_events(args_namespace)\n",
     "\n",
-    "        args = default_args.copy()  # start with defaults\n",
-    "        # update with specific settings for this file\n",
-    "        args.update({\n",
-    "            'path_to_model': path_to_model,\n",
-    "            'input_file': file_path,\n",
-    "            'use_gpu': use_gpu,\n",
-    "            'output_folder': subdir_output_folder,\n",
-    "            'window_duration': avg_frame_interval,\n",
-    "        })\n",
-    "        args_namespace = argparse.Namespace(**args)\n",
-    "        process_events(args_namespace)\n"
+    "def get_sensor_size_from_image(image_path):\n",
+    "    with Image.open(image_path) as img:\n",
+    "        width, height = img.size\n",
+    "    return width, height\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_resblur_scenario(scenario_path, path_to_model, use_gpu, output_folder):\n",
+    "    parser = main_inference_options()\n",
+    "    set_inference_options(parser)\n",
+    "    default_args = vars(parser.parse_args([]))  # get a dictionary of defaults\n",
+    "    default_args.update(\n",
+    "        {\n",
+    "            \"use_gpu\": use_gpu,\n",
+    "            \"auto_hdr\": True,\n",
+    "            \"fixed_duration\": True,\n",
+    "        }\n",
+    "    )\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    \n",
+    "    events_txt_path = os.path.join(scenario_path, 'events_txt')\n",
+    "    frame_clip_path = os.path.join(scenario_path, 'frame_clip')\n",
+    "    \n",
+    "    # Get sensor size from a ground truth image\n",
+    "    gt_image_path = next(glob.glob(os.path.join(frame_clip_path, '*.png')))\n",
+    "    width, height = get_sensor_size_from_image(gt_image_path)\n",
+    "    \n",
+    "    # Concatenate all event text files into a DataFrame\n",
+    "    txt_files = sorted(glob.glob(os.path.join(events_txt_path, '*.txt')))\n",
+    "    events_df = pd.concat((convert_txt_to_df(f) for f in txt_files), ignore_index=True)\n",
+    "    \n",
+    "    # Process events\n",
+    "    print(f\"Processing {scenario_path}\")\n",
+    "    \n",
+    "    subdir_output_folder = os.path.join(output_folder, os.path.basename(scenario_path))\n",
+    "    os.makedirs(subdir_output_folder, exist_ok=True)\n",
+    "\n",
+    "    args = default_args.copy()  # start with defaults\n",
+    "    # update with specific settings for this scenario\n",
+    "    args.update(\n",
+    "        {\n",
+    "            \"path_to_model\": path_to_model,\n",
+    "            \"input_file\": events_df,  # pass DataFrame directly\n",
+    "            \"use_gpu\": use_gpu,\n",
+    "            \"output_folder\": subdir_output_folder,\n",
+    "            \"window_duration\": 33.33,  # you may need to adjust this value\n",
+    "            \"width\": width,\n",
+    "            \"height\": height,\n",
+    "        }\n",
+    "    )\n",
+    "    args_namespace = argparse.Namespace(**args)\n",
+    "    process_events(args_namespace)"
    ]
   },
   {
@@ -594,7 +687,10 @@
     "    use_gpu = True\n",
     "    output_folder = \"RESBLUR_OUT\"\n",
     "\n",
-    "    process_dataset(dataset_dir, path_to_model, use_gpu, output_folder)\n"
+    "    for scenario in os.listdir(dataset_dir):\n",
+    "        scenario_path = os.path.join(dataset_dir, scenario)\n",
+    "        if os.path.isdir(scenario_path):\n",
+    "            process_resblur_scenario(scenario_path, path_to_model, use_gpu, output_folder)"
    ]
   }
  ],
