--- a/inference.ipynb
+++ b/inference.ipynb
@@ -604,21 +604,24 @@
     "        }\n",
     "    )\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
-    "    \n",
-    "    events_txt_path = os.path.join(scenario_path, 'events_txt')\n",
-    "    frame_clip_path = os.path.join(scenario_path, 'frame_clip')\n",
-    "    \n",
+    "\n",
+    "    assert \"eventcntts_hhfcode_unnormed0606_txt\" in os.listdir(\n",
+    "        scenario_path\n",
+    "    ) and \"frame_clip\" in os.listdir(scenario_path)\n",
+    "    events_txt_path = os.path.join(scenario_path, \"eventcntts_hhfcode_unnormed0606_txt\")\n",
+    "    frame_clip_path = os.path.join(scenario_path, \"frame_clip\")\n",
+    "\n",
     "    # Get sensor size from a ground truth image\n",
-    "    gt_image_path = next(glob.glob(os.path.join(frame_clip_path, '*.png')))\n",
+    "    gt_image_path = glob.glob(os.path.join(frame_clip_path, \"*.png\"))[0]\n",
     "    width, height = get_sensor_size_from_image(gt_image_path)\n",
-    "    \n",
+    "\n",
     "    # Concatenate all event text files into a DataFrame\n",
-    "    txt_files = sorted(glob.glob(os.path.join(events_txt_path, '*.txt')))\n",
+    "    txt_files = sorted(glob.glob(os.path.join(events_txt_path, \"*.txt\")))\n",
     "    events_df = pd.concat((convert_txt_to_df(f) for f in txt_files), ignore_index=True)\n",
-    "    \n",
+    "\n",
     "    # Process events\n",
     "    print(f\"Processing {scenario_path}\")\n",
-    "    \n",
+    "\n",
     "    subdir_output_folder = os.path.join(output_folder, os.path.basename(scenario_path))\n",
     "    os.makedirs(subdir_output_folder, exist_ok=True)\n",
     "\n",
