--- a/inference.ipynb
+++ b/inference.ipynb
@@ -351,8 +351,11 @@
    "outputs": [],
    "source": [
     "USE_DYNAMIC_WINDOWING = True\n",
-    "def process_events(args):\n",
-    "    if args.width and args.height:  # sensor size is provided in args\n",
+    "def process_events(args, timestamps=None):\n",
+    "    if args.width and args.height and timestamps:  # sensor size is provided in args\n",
+    "        width = args.width\n",
+    "        height = args.height\n",
+    "        assert args.width and args.height and timestamps is not None\n",
     "        width = args.width\n",
     "        height = args.height\n",
     "    else:  # read sensor size from the first line of the event file\n",
@@ -409,9 +412,10 @@
     "        print('Will compute voxel grid on CPU.')\n",
     "\n",
     "    if USE_DYNAMIC_WINDOWING:\n",
-    "        timestamps_path = os.path.join(args.output_folder, 'gt', 'timestamps.txt')\n",
-    "        timestamps = np.loadtxt(timestamps_path)\n",
-    "        timestamps = timestamps * 1e9  # Convert to ns\n",
+    "        if timestamps is None:\n",
+    "            timestamps_path = os.path.join(args.output_folder, 'gt', 'timestamps.txt')\n",
+    "            timestamps = np.loadtxt(timestamps_path)\n",
+    "            timestamps = timestamps * 1e9  # Convert to ns\n",
     "        if file_extension == '.h5':\n",
     "            df = convert_h5_to_df(args.input_file)\n",
     "        elif file_extension == '.txt':\n",
@@ -615,6 +619,11 @@
     "    gt_image_path = glob.glob(os.path.join(frame_clip_path, \"*.png\"))[0]\n",
     "    width, height = get_sensor_size_from_image(gt_image_path)\n",
     "\n",
+    "    # Parse start timestamps from the ground truth image file names\n",
+    "    gt_image_files = sorted(glob.glob(os.path.join(frame_clip_path, '*.png')))\n",
+    "    timestamps = np.array([int(os.path.basename(f).split('_')[0].split('-')[0]) for f in gt_image_files])\n",
+    "    timestamps = timestamps * 1e-9  # Convert to seconds\n",
+    "\n",
     "    # Concatenate all event text files into a DataFrame\n",
     "    txt_files = sorted(glob.glob(os.path.join(events_txt_path, \"*.txt\")))\n",
     "    events_df = pd.concat((convert_txt_to_df(f) for f in txt_files), ignore_index=True)\n",
@@ -639,7 +648,7 @@
     "        }\n",
     "    )\n",
     "    args_namespace = argparse.Namespace(**args)\n",
-    "    process_events(args_namespace)"
+    "    process_events(args_namespace, timestamps)"
    ]
   },
   {
