--- a/inference.ipynb
+++ b/inference.ipynb
@@ -352,7 +352,8 @@
    "source": [
     "USE_DYNAMIC_WINDOWING = True\n",
     "def process_events(args, timestamps=None):\n",
-    "    if args.width and args.height and timestamps:  # sensor size is provided in args\n",
+    "    _, file_extension = os.path.splitext(args.input_file)\n",
+    "    if args.width and args.height and timestamps is not None:  # sensor size is provided in args\n",
     "        width = args.width\n",
     "        height = args.height\n",
     "        assert args.width and args.height and timestamps is not None\n",
@@ -365,7 +366,6 @@
     "            raise ValueError(f\"File {path_to_events} does not exist\")\n",
     "        \n",
     "        # Determine the type of the file\n",
-    "        _, file_extension = os.path.splitext(args.input_file)\n",
     "        if file_extension == '.txt':\n",
     "            header = pd.read_csv(path_to_events, delim_whitespace=True, header=None, names=['width', 'height'],\n",
     "                                dtype={'width': np.int, 'height': np.int},\n",
@@ -621,7 +621,7 @@
     "\n",
     "    # Parse start timestamps from the ground truth image file names\n",
     "    gt_image_files = sorted(glob.glob(os.path.join(frame_clip_path, '*.png')))\n",
-    "    timestamps = np.array([int(os.path.basename(f).split('_')[0].split('-')[0]) for f in gt_image_files])\n",
+    "    timestamps = np.array([int(os.path.basename(f).split('_')[0].split('-')[0][1:]) for f in gt_image_files])\n",
     "    timestamps = timestamps * 1e-9  # Convert to seconds\n",
     "\n",
     "    # Concatenate all event text files into a DataFrame\n",
